# DisasterAI

./: .gitignore  BELIEF_UPDATE_ANALYSIS.md  CALIBRATION_PROTOCOL.md  CALIBRATION_STRATEGY.md  CITATION.cff  CODE_REVIEW.md  CODE_REVIEW_2026_02.md  CONFIRMATION_BIAS_BUG.md  CONFIRMATION_FIX_SUMMARY.md  CRITICAL_ISSUES_REVIEW.md  CRITICAL_Q_LEARNING_ISSUES.md  CURRENT_QLEARNING_FEEDBACK_ANALYSIS.md  DESIGN_PROPOSAL_NETWORK_MOBILITY.md  DIAGNOSE_FEEDBACK.py  DetectionAction.py  DisBeliefMod.py  DisMod.py  DisasterAI_Experiments.ipynb  DisasterAI_Model.py  DisasterAIdebug.py  DisasterBubbles.py  DisasterModel.py  DisasterModel2.py  EXPERIMENTAL_DESIGN.md  EXPERIMENT_PLAN.md  FAR_CELL_VERIFICATION_ANALYSIS.md  FINAL_MECHANICS_REVIEW.md  FIXES_SUMMARY.md  FUNDAMENTAL_LOGIC_FLAW.md  INFO_QUALITY_FIX.md  ISSUES_ANALYSIS.md  LICENSE  METHODS_PAPER.md  METHODS_PAPER.tex  MODEL_OVERVIEW_ACADEMIC.md  Model2.py  PROPOSED_BELIEF_MECHANISM.md  PROPOSED_FIXES.md  QUICK_VERIFICATION_TEST.py  README.md  (+68 more)
.github/workflows/: archive-artifacts.yml  ci.yml  (+16 more)
config/: defaults.yaml  deprivation.yaml  sensitivity.yaml  services.yaml
cross/: cityplane.csv  cityvector.csv  cityvector_clustered.csv
deprivation-accessibility-eu/: .gitignore  CITATION.cff  LICENSE  README.md  methods.md  pyproject.toml
docs/: index.md
results/: README.md
tests/: test_cityvector.py  test_config.py  test_deprivation_functions.py  test_equity_indices.py  test_pipeline_demo.py  test_sensitivity.py  test_typology.py
tools/: compare_configs.py  compare_epsilon.py  persist_and_push.sh  persist_results.py
(+91 files in other folders)
