[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "depacc"
version = "0.1.0"
description = "Potential-deprivation accessibility equity across European cities: everyday (gravity/2SFCA) vs emergency (nearest-facility) deprivation surfaces and their divergence."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Tina Comes", email = "t.comes@tudelft.nl" }]
requires-python = ">=3.11"

# Core dependencies: enough for the deprivation/divergence/equity mathematics,
# config handling and the CLI. Geospatial, routing, OSM and viz stacks are
# extras so that unit tests and CI stay light and deterministic.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14",
    "rasterio>=1.3",
    "shapely>=2.0",
    "pyproj>=3.6",
]
osm = [
    "pyrosm>=0.6.2",
    "osmium>=3.6",
]
transit = [
    # r5py requires a Java runtime (JDK 21). See README.
    "r5py>=0.1.1",
    "gtfs-kit>=6.0",
]
stats = [
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
]
viz = [
    "matplotlib>=3.8",
]
full = ["depacc[geo,osm,transit,stats,viz]"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
depacc = "depacc.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/depacc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
